# samfocus

./: .gitignore  AGENTS.md  LAUNCHER.md  LICENSE  PLAN.md  README.md  TESTING.md  build.zig  build.zig.zon  imgui.ini  meson.build  run_tests.sh
.cache/clangd/index/: cimgui.cpp.EC2C7F474E0986CF.idx  cimgui.h.30BC8CC859D6CE78.idx  cimgui_impl.h.410C9D9247682D42.idx  database.c.56C017DD620D461C.idx  database.h.20CAAC68ACB64D95.idx  imconfig.h.D1E773DBF59A3568.idx  imgui.cpp.5FF9F984B03E7DE8.idx  imgui.h.FA612F30BFF46D95.idx  imgui_demo.cpp.7A9EADF5788137C0.idx  imgui_draw.cpp.D3F5B5CF69BF17CA.idx  imgui_impl_glfw.cpp.3753EBB008DEF12D.idx  imgui_impl_glfw.h.D0903894E398B645.idx  imgui_impl_opengl3.cpp.2C579D414F824889.idx  imgui_impl_opengl3.h.FAC932A7E5D55D9E.idx  imgui_impl_opengl3_loader.h.441A01B3F277112E.idx  imgui_internal.h.49BA021DE5B0D5B8.idx  imgui_tables.cpp.6E67C6056927E388.idx  imgui_widgets.cpp.10C03EFF2769C026.idx  imstb_rectpack.h.9B8A2D5307F82FB3.idx  imstb_textedit.h.5683A5B4B3F09ED1.idx  imstb_truetype.h.E7CC1AC0A5ADC427.idx  inbox_view.c.FBA9670CD3B873BC.idx  inbox_view.h.47C3E93E1CD90C4E.idx  main.c.8BC91426FD30CA7D.idx  platform.c.3E1BA0BB523861D2.idx  platform.h.0DEBF48B5ACAD477.idx  task.c.91C2E0EDB0A2A866.idx  task.h.C36548C3991F31FB.idx
.github/workflows/: build.yml  ci.yml  release.yml
src/: main.c
src/cli/: samfocus-cli.c
src/core/: context.c  context.h  export.c  export.h  platform.c  platform.h  preferences.c  preferences.h  project.c  project.h  task.c  task.h  undo.c  undo.h
src/db/: database.c  database.h
src/ui/: command_palette.c  command_palette.h  help_overlay.c  help_overlay.h  inbox_view.c  inbox_view.h  launcher.c  launcher.h  markdown.c  markdown.h  sidebar.c  sidebar.h
tests/: test_framework.h
tests/integration/: test_workflows.c
tests/unit/: test_database.c
